# utf

./: .gitignore  CMakeLists.txt  UTF.hpp  converter.cpp  test.cpp
include/utf/: Collator.hpp  UTF.hpp  UnicodeData.hpp
src/: Collator.cpp
test/: test.cpp
tools/: generate_collation.py  generate_tables.py  get.sh
